--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Tragamonedas</title>
 </head>
 <body>
-    <h1>Tragamonedas</h1>
+    <h1>index</h1>
 </body>
 </html>
