--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tragamonedas</title>
-</head>
-<body>
-<h1>index</h1>
-</body>
+<html>
+    <head>
+        <title>Tragamonedas</title>
+        <meta charset="utf-8" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link href="tragamonedas.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="vscode/tragamonedas.js"></script>
+    </head>
+    <body class="container">
+        <h1 class="card-body text-center">¡Bienvenido al Tragamonedas!</h1>
+        &nbsp;
+        <div class="row">
+            <div class="col-4">
+                <h3 class="titulos">Regístrate!</h3>
+                <form>
+                    <div>
+                        <label class="form-label">Ingresa tu nombre:</label>
+                        <input class="form-control" type="text" placeholder="Nombre"/>
+                    </div>
+                    &nbsp;
+                    <div>
+                        <label class="form-label">Animal preseleccionado:</label>
+                        <textarea class="form-control">nombre</textarea>
+                    </div>
+                    <div class="mt-2">
+                        <a class="btn btn-success" type="button" href="tragamonedas.html">Ingresar</a>
+                    </div>
+                </form>
+            </div>
+            
+            <div class="col-8">
+                <img src="imagenes/Tragamonedas.jpg">
+            </div>
+        </div>
+    </body>
 </html>
